initialize state variables, add timer functionality

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <button id="reset-button" class="btn btn-lg btn-primary">Reset</button>
   </div>
   <div id="play-area">
+    <!-- <div class="large card dA"></div> -->
   </div>
 </body>
 </html>
